--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.6.2",
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -56,6 +57,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
@@ -106,7 +108,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "less": "^4.1.1",
     "less-loader": "5.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "redux-devtools": "^3.7.0"
   },
   "jest": {
     "roots": [
